base-infra/external-proxies/homeassistant.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: ha-service
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 8123
---
kind: Endpoints
apiVersion: v1
metadata:
  name: ha-service
  namespace: infra
subsets:
  - addresses:
      - ip: 192.168.1.109
    ports:
      - port: 8123
