base-infra/external-proxies/plex.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: plex-service
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 32400
---
kind: Endpoints
apiVersion: v1
metadata:
  name: plex-service
  namespace: infra
subsets:
  - addresses:
      - ip: 192.168.1.60
    ports:
      - port: 32400
