base-infra/external-proxies/radarr.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: radarr-service
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 7878
---
kind: Endpoints
apiVersion: v1
metadata:
  name: radarr-service
  namespace: infra
subsets:
  - addresses:
      - ip: 192.168.1.13
    ports:
      - port: 7878
