base-infra/external-proxies/sonarr.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: sonarr-service
  namespace: infra
spec:
  ports:
    - protocol: TCP
      port: 8989
---
kind: Endpoints
apiVersion: v1
metadata:
  name: sonarr-service
  namespace: infra
subsets:
  - addresses:
      - ip: 192.168.1.13
    ports:
      - port: 8989
